[package]
name = "ssh_monitor_client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4"] }
